// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parsing pentabarf XML: overview: auditoriums 1`] = `
[
  {
    "id": "A.01 (Someroom)",
    "isPhysical": false,
    "kind": "auditorium",
    "name": "01 (Someroom)",
    "slug": "01_someroom_",
    "talks": Map {
      "E001" => {
        "auditoriumId": "A.01 (Someroom)",
        "dateTs": 1675468800000,
        "endTime": 1675502100000,
        "id": "E001",
        "livestream_endTime": 0,
        "prerecorded": true,
        "qa_startTime": null,
        "slug": "testcon_opening_remarks",
        "speakers": [
          {
            "email": "",
            "id": "9012",
            "matrix_id": "",
            "name": "John Teststone",
            "role": "speaker",
          },
          {
            "email": "",
            "id": "90367",
            "matrix_id": "",
            "name": "Evå 完牲 Exampleson",
            "role": "speaker",
          },
        ],
        "startTime": 1675501200000,
        "subtitle": "",
        "title": "Testcon01: Opening Remarks",
        "track": "Track01",
      },
    },
  },
]
`;

exports[`parsing pentabarf XML: overview: conference 1`] = `
{
  "auditoriums": [
    {
      "id": "A.01 (Someroom)",
      "isPhysical": false,
      "kind": "auditorium",
      "name": "01 (Someroom)",
      "slug": "01_someroom_",
      "talks": Map {
        "E001" => {
          "auditoriumId": "A.01 (Someroom)",
          "dateTs": 1675468800000,
          "endTime": 1675502100000,
          "id": "E001",
          "livestream_endTime": 0,
          "prerecorded": true,
          "qa_startTime": null,
          "slug": "testcon_opening_remarks",
          "speakers": [
            {
              "email": "",
              "id": "9012",
              "matrix_id": "",
              "name": "John Teststone",
              "role": "speaker",
            },
            {
              "email": "",
              "id": "90367",
              "matrix_id": "",
              "name": "Evå 完牲 Exampleson",
              "role": "speaker",
            },
          ],
          "startTime": 1675501200000,
          "subtitle": "",
          "title": "Testcon01: Opening Remarks",
          "track": "Track01",
        },
      },
    },
  ],
  "interestRooms": [],
  "title": "Testcon01",
}
`;

exports[`parsing pentabarf XML: overview: interestRooms 1`] = `[]`;

exports[`parsing pentabarf XML: overview: speakers 1`] = `
[
  {
    "email": "",
    "id": "9012",
    "matrix_id": "",
    "name": "John Teststone",
    "role": "speaker",
  },
  {
    "email": "",
    "id": "90367",
    "matrix_id": "",
    "name": "Evå 完牲 Exampleson",
    "role": "speaker",
  },
]
`;

exports[`parsing pentabarf XML: overview: talks 1`] = `
[
  {
    "auditoriumId": "A.01 (Someroom)",
    "dateTs": 1675468800000,
    "endTime": 1675502100000,
    "id": "E001",
    "livestream_endTime": 0,
    "prerecorded": true,
    "qa_startTime": null,
    "slug": "testcon_opening_remarks",
    "speakers": [
      {
        "email": "",
        "id": "9012",
        "matrix_id": "",
        "name": "John Teststone",
        "role": "speaker",
      },
      {
        "email": "",
        "id": "90367",
        "matrix_id": "",
        "name": "Evå 完牲 Exampleson",
        "role": "speaker",
      },
    ],
    "startTime": 1675501200000,
    "subtitle": "",
    "title": "Testcon01: Opening Remarks",
    "track": "Track01",
  },
]
`;
